@@ -1,3 +1,8 @@
+07 September 2008
+
+* Process all privsep messages in parent rather than just the first.
+  Fixes timeouts reported by Frank Terbeck.
+
 08 August 2008
 
 * Sort fetch list for POP3 to preserve server mailbox order, requested
@@ -848,4 +853,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.199 2008-08-08 20:14:15 nicm Exp $
+$Id: CHANGES,v 1.200 2008-09-07 21:51:40 nicm Exp $
